added line in expr1 branch

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This repository contains work done for Harvard's CS109 Online Course (2013) on Data Science.
 
 This is a test.
+
+Experiment with branches
