working on lab3

--- a/labs/lab3/lab3.ipynb
+++ b/labs/lab3/lab3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f081c6ac07bf2d901cd3980bd5e9442d02a95532edd4289864147b6006fe1604"
+  "signature": "sha256:fb528038fabaa6be7870a6efc0fadb5ffd67cc33634499bed41e3d12733b2b45"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3077,26 +3077,12 @@
      "input": [
       "#your code here\n",
       "def weigh(f):\n",
-      "    return np.sum(f.weight*f.palmitic)/f.weight.sum()\n",
-      "smallerdf.head()\n"
+      "    return np.sum(f.weight*f.palmitic)/f.weight.sum()\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 135,
-       "text": [
-        "region\n",
-        "1         13.359769\n",
-        "2         11.113557\n",
-        "3         10.970237\n",
-        "dtype: float64"
-       ]
-      }
-     ],
-     "prompt_number": 135
+     "outputs": [],
+     "prompt_number": 139
     },
     {
      "cell_type": "markdown",
@@ -3118,17 +3104,17 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 125,
+       "prompt_number": 140,
        "text": [
         "region\n",
-        "1         0.041362\n",
-        "2         0.113404\n",
-        "3         0.072651\n",
+        "1         13.359769\n",
+        "2         11.113557\n",
+        "3         10.970237\n",
         "dtype: float64"
        ]
       }
      ],
-     "prompt_number": 125
+     "prompt_number": 140
     },
     {
      "cell_type": "markdown",
