--- a/homework/HW2.ipynb
+++ b/homework/HW2.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:cf5ea7070bfbf4204373b28312a486255da1550d3989eb6a8071c1c307da12e6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -60,6 +61,32 @@
       "9. 2012results.csv\n",
       "10. cleaned-state_data2012.csv"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import requests\n",
+      "import StringIO\n",
+      "import zipfile\n",
+      "\n",
+      "r = requests.get(\"https://www.dropbox.com/s/vng5x10b837ahnc/hw2_data.zip?dl=1\")\n",
+      "z = zipfile.ZipFile(StringIO.StringIO(r.content))\n",
+      "print z.namelist()\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['data/', 'data/.#predictwise_forecast.html', 'data/2008results.csv', 'data/2012results.csv', 'data/census2010.csv', 'data/cleaned-state_data2012.csv', 'data/electoral_votes.csv', 'data/g08.csv', 'data/g12.csv', 'data/gallup2008.csv', 'data/nat.csv', 'data/olive.csv', 'data/p04.csv', 'data/parse_predictwise.py', 'data/partisan_voting.csv', 'data/predictwise.csv', 'data/predictwise.html', '__MACOSX/', '__MACOSX/data/', '__MACOSX/data/._predictwise.html', 'data/us-states.json']\n"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
