--- a/homework/HW2.ipynb
+++ b/homework/HW2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:71287c332157e0480e6e6015e431b5d6f4178b1e3270b257290014e7e2eaeac4"
+  "signature": "sha256:9ee186911511a97a7809c836113ab432d604ecd38d34c80edca22e4e007540d4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1292,29 +1292,31 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "\"\"\"\n",
-      "Function\n",
-      "--------\n",
-      "biased_gallup_poll\n",
+      "#your code here\n",
+      "def biased_gallup_poll(gallup, bias)\n",
+      "    \"\"\"\n",
+      "    Function\n",
+      "    --------\n",
+      "    biased_gallup_poll\n",
       "\n",
-      "Subtracts a fixed amount from Dem_Adv, beofore computing the uncertain_gallup_model.\n",
-      "This simulates correcting a hypothetical bias towards Democrats\n",
-      "in the original Gallup data.\n",
+      "    Subtracts a fixed amount from Dem_Adv, beofore computing the uncertain_gallup_model.\n",
+      "    This simulates correcting a hypothetical bias towards Democrats\n",
+      "    in the original Gallup data.\n",
       "\n",
-      "Inputs\n",
-      "-------\n",
-      "gallup : DataFrame\n",
-      "    The Gallup party affiliation data frame above\n",
-      "bias : float\n",
-      "    The amount by which to shift each prediction\n",
-      "    \n",
-      "Examples\n",
-      "--------\n",
-      ">>> model = biased_gallup(gallup, 1.)\n",
-      ">>> model.ix['Flordia']\n",
-      ">>> .460172\n",
-      "\"\"\"\n",
-      "#your code here\n"
+      "    Inputs\n",
+      "    -------\n",
+      "    gallup : DataFrame\n",
+      "        The Gallup party affiliation data frame above\n",
+      "    bias : float\n",
+      "        The amount by which to shift each prediction\n",
+      "\n",
+      "    Examples\n",
+      "    --------\n",
+      "    >>> model = biased_gallup(gallup, 1.)\n",
+      "    >>> model.ix['Flordia']\n",
+      "    >>> .460172\n",
+      "    \"\"\"\n",
+      "\n"
      ],
      "language": "python",
      "metadata": {},
